Ensure that the bg img covers the entire section

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,5 +8,6 @@ body {
 .hero {
   background-image: url(../assets/repeated-square-dark.webp);
   /* Add the bg image for the hero section*/
-  
+  background-size: cover;
+  /*Ensure the bg img covers the entire section */
 }
